Build the fuzzers from oss-fuzz
The fuzzers from oss-fuzz in projects/e2fsprogs/fuzz (as of commit
78ecd3f07fca with some slight modifications for better error
reporting) have been placed in the tests/fuzz directory and the
configure script now supports a new option --enable-fuzzing which will
build these fuzzers using clang's -fsanitize=fuzzer command line
option.

In general, some sanitizer such as --enable-addrsan or --enable-ubsan
(to enable ASAN or UBSAN, respectively) should be enabled alongside
--enable-fuzzing.

A typical configure command to build the fuzzers might be:

  configure CC=clang CXX=clang++ CFLAGS=-g --enable-fuzzing --enable-addrsan

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/lib/support/Makefile.in
+++ b/lib/support/Makefile.in
@@ -18,6 +18,7 @@ OBJS=		cstring.o \
 		plausible.o \
 		profile.o \
 		parse_qtype.o \
+		print_fs_flags.o \
 		profile_helpers.o \
 		prof_err.o \
 		quotaio.o \
@@ -30,6 +31,7 @@ SRCS=		$(srcdir)/argv_parse.c \
 		$(srcdir)/mkquota.c \
 		$(srcdir)/parse_qtype.c \
 		$(srcdir)/plausible.c \
+		$(srcdir)/print_fs_flags.c \
 		$(srcdir)/profile.c \
 		$(srcdir)/profile_helpers.c \
 		prof_err.c \
