--- a/lib/ext2fs/ext2_err.et.in
+++ b/lib/ext2fs/ext2_err.et.in
@@ -554,4 +554,7 @@ ec	EXT2_FILSYS_CORRUPTED,
 ec	EXT2_ET_EXTENT_CYCLE,
 	"Found cyclic loop in extent tree"
 
+ec	EXT2_ET_EXTERNAL_JOURNAL_NOSUPP,
+	"Operation not supported on an external journal"
+
 	end
