Support use libunwind for backtracking
When execinfo.h not available.

Can be used in musl Liunx system as well as *BSD.

Signed-off-by: Rin Cat (鈴猫) <dev@rincat.ch>

--- a/lib/config.h.in
+++ b/lib/config.h.in
@@ -169,6 +169,9 @@
 /* Define to 1 if you have the `keyctl' function. */
 #undef HAVE_KEYCTL
 
+/* Define to 1 if you have the <libunwind.h> header file. */
+#undef HAVE_LIBUNWIND_H
+
 /* Define to 1 if you have the <linux/falloc.h> header file. */
 #undef HAVE_LINUX_FALLOC_H
 
