--- a/debian/rules
+++ b/debian/rules
@@ -14,6 +14,11 @@ ifeq ($(DEB_HOST_ARCH_OS), hurd)
 SKIP_FUSE2FS=yes
 endif
 
+ifeq ($(DEB_HOST_ARCH_OS), linux)
+export deb_systemdsystemunitdir = $(shell pkg-config --variable=systemdsystemunitdir systemd | sed s,^/,,)
+export deb_udevudevdir = $(shell pkg-config pkg-config --variable=udevdir udev | sed s,^/,,)
+endif
+
 ifneq ($(filter pkg.e2fsprogs.no-fuse2fs,$(DEB_BUILD_PROFILES)),)
 SKIP_FUSE2FS=yes
 endif
@@ -30,7 +35,7 @@ INSTALL ?= install
 INSTALL_PROGRAM ?= $(INSTALL) -p -m 0755
 
 ifneq (,$(findstring update-symbols,$(DEB_BUILD_OPTIONS)))
-SYMBOL_LIBS := libext2fs libcomerr2 libss2
+SYMBOL_LIBS := libext2fst64 libcomerr2 libss2
 endif
 
 CFLAGS_SHLIB = $(CFLAGS)
