--- a/tests/progs/Makefile.in
+++ b/tests/progs/Makefile.in
@@ -20,7 +20,8 @@ TEST_REL_OBJS=	test_rel.o test_rel_cmds.o
 
 TEST_ICOUNT_OBJS=	test_icount.o test_icount_cmds.o
 
-SRCS=	$(srcdir)/test_rel.c 
+SRCS=	$(srcdir)/test_icount.c \
+	$(srcdir)/test_rel.c
 
 LIBS= $(LIBEXT2FS) $(LIBSS) $(LIBCOM_ERR) $(SYSLIBS)
 DEPLIBS= $(LIBEXT2FS) $(DEPLIBSS) $(DEPLIBCOM_ERR)
